--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@preact/signals-react": "^1.2.1",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
-    "next": "13.0.0",
+    "next": "^13.5.6",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
