--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://shanmuktej.github.io/Todo-List",
   "name": "todo_list",
   "version": "0.1.0",
   "private": true,
@@ -6,12 +7,15 @@
     "dev": "next dev -p 8080",
     "build": "next build",
     "start": "next start -p 8080",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@preact/signals-react": "^1.2.1",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "gh-pages": "^6.0.0",
     "next": "^13.5.6",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
